multiple bug fixes and enhancements
* layouts/partials/li.html
	- changed {{ .Summary }} call to {{ .Content | safeHTML | truncate
200}} as Hugo's .Summary function strips all html and formatting,
leaving a scrunched block of text
* style.css
	- disabled the top border for conversation section, as there's now a
text divider so this seemed redundant
	- fixed cover and text alignment in the native Micro.blog bookshelves
* layouts/partials/article.html
	- added a check for a custom ```<!--poetry-->``` comment if writing a
poetry post
	- this will change the div ID to poetry, and disable dropcaps from
enabling which messes up the alignment of a poem

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -654,6 +654,19 @@ a:link::-moz-selection {
 	margin-bottom: 0;
 }
 
+
+/* Bookshelf styling */
+
+p.bookshelf_book {
+	clear: both;
+	margin: 2em auto;
+}
+
+p.bookshelf_book a img {
+	padding-right: 0 !important;
+	margin: auto 1em auto 0;
+} 
+
 /* Microblog conversation styling */
 
 .microblog_conversation::before {
@@ -671,7 +684,7 @@ a:link::-moz-selection {
 .microblog_conversation {
 	margin-top: 50px;
 	padding-top: 20px;
-	border-top: 1px solid var(--body-text);
+	/*border-top: 1px solid var(--body-text);*/
 	max-width: 60rem;
 	margin-left: auto;
 	margin-right: auto;
